inclusão de links e icon head

--- a/teste 2.html
+++ b/teste 2.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cross word Puzzel</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <style>
         body{font-family: Arial, Helvetica, sans-serif; background-color: #F7F7FF;}
 
@@ -45,9 +48,9 @@
 </head>
 
 <body onload="initializeScreen()">
-    <h1>CAÇA-PALAVRAS</h1>
-    <p class="textDesc">Sabemos que você é um expert em Arquitetura computacional, por isso, preparamos esse caça-palavras para mostrar o quanto você manja!<br/>
-    Fique atento as dicas abaixo do caça-palavras, algumas estão muito facéis e outras nem tanto, mas você consegue!</p>
+    <h1>PALAVRAS CRUZADAS</h1>
+    <p class="textDesc">Sabemos que você é um expert em Arquitetura computacional, por isso, preparamos esse palavras cruzadas para mostrar o quanto você manja!<br/>
+    Fique atento as dicas abaixo das palavras cruzadas, algumas estão muito facéis e outras nem tanto, mas você consegue!</p>
     <section>
         <div>
             <table id="puzzel">
