Reparei um erro no código e adicionei a arquitetura

--- a/palavrascruzadas.html
+++ b/palavrascruzadas.html
@@ -137,6 +137,7 @@
         document.getElementById("txt_13_10").placeholder = "13";
         document.getElementById("txt_6_16").placeholder = "14";
         document.getElementById("txt_9_16").placeholder = "15";
+        document.getElementById("txt_0_9").placeholder = "16";
     }
     //Armazena o ID da célula selecionada em currentTextInput
     function textInputFocus(txtID123) {
