--- a/palavrascruzadas.html
+++ b/palavrascruzadas.html
@@ -112,7 +112,7 @@
                 var cell = row.insertCell(-1);
                 if (rowData[j] != 0) {
                     var txtID = String('txt' + '_' + i + '_' + j);
-                    cell.innerHTML = '<input type="text" class="inputBox" maxlength="1" style="text-transform: lowercase" ' + 'id="' + txtID + '" onfocus="textInputFocus(' + "'" + txtID + "'" + ')">';
+                    cell.innerHTML = '<input type="text" oninput="this.value=this.value.toLowerCase()" class="inputBox" maxlength="1" id="' + txtID + '" onfocus="textInputFocus(' + "'" + txtID + "'" + ')">';
                 } else {
                     cell.style.backgroundColor = "#F7F7FF";
                 }
